Adapt template for single-topic workshop

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 carpentry: "lc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "Introduction to Data for KU Libraries"
 
 # Contact email address.
 email: jamenebk@ku.edu
